# ML-DL-NLP

Deep_Learning/ANN/: Interview.md  Quiz.md  README.md  pyproject.toml
Deep_Learning/ANN/codes/: 01_in_memory_example.py  02_csv_example.py  dataset.py  exercises.md  model.py  solutions.py  train.py
Deep_Learning/Autoencoders/: Interview.md  Quiz.md  README.md  pyproject.toml
Deep_Learning/Autoencoders/codes/: model.py  train.py
Deep_Learning/Autoencoders/datasets/: README.md
Deep_Learning/GAN/: Interview.md  Quiz.md  README.md  pyproject.toml
Deep_Learning/GAN/codes/: model.py  train.py
Deep_Learning/GAN/datasets/: README.md
ML_Engineering_Projects/Area_1_ML_System_Design/01_Semantic_Search_Engine/: .env.example  README.md  data.txt  interview.md  pyproject.toml
ML_Engineering_Projects/Area_1_ML_System_Design/01_Semantic_Search_Engine/scripts/: build_index.py  run_search.py
ML_Engineering_Projects/Area_1_ML_System_Design/01_Semantic_Search_Engine/src/: config.py  embedder.py  indexer.py  searcher.py  vector_store.py
ML_Engineering_Projects/Area_1_ML_System_Design/01_Semantic_Search_Engine/tests/: test_embedder.py  test_searcher.py  test_vector_store.py
ML_Engineering_Projects/Area_1_ML_System_Design/02_Document_QA_RAG/: .env.example  README.md  data.txt  interview.md  pyproject.toml
ML_Engineering_Projects/Area_1_ML_System_Design/02_Document_QA_RAG/scripts/: ask.py  ingest_documents.py
ML_Engineering_Projects/Area_1_ML_System_Design/02_Document_QA_RAG/src/: chunker.py  config.py  document_loader.py  generator.py  rag_pipeline.py  retriever.py
ML_Engineering_Projects/Area_1_ML_System_Design/02_Document_QA_RAG/tests/: test_chunker.py  test_rag_pipeline.py  test_retriever.py
ML_Engineering_Projects/Area_1_ML_System_Design/03_NLP_Entity_Extraction/: README.md  data.txt  interview.md  pyproject.toml
ML_Engineering_Projects/Area_1_ML_System_Design/03_NLP_Entity_Extraction/scripts/: batch_process.py  extract_entities.py
ML_Engineering_Projects/Area_1_ML_System_Design/03_NLP_Entity_Extraction/src/: document_parser.py  entity_aggregator.py  ner_model.py  output_formatter.py  relation_extractor.py
ML_Engineering_Projects/Area_1_ML_System_Design/03_NLP_Entity_Extraction/tests/: test_document_parser.py  test_entity_aggregator.py  test_ner_model.py
ML_Engineering_Projects/Area_2_Model_Training_Optimization/04_Text_Classification_BERT/: README.md  data.txt  interview.md  pyproject.toml
ML_Engineering_Projects/Area_2_Model_Training_Optimization/04_Text_Classification_BERT/scripts/: evaluate.py  predict.py  train.py
ML_Engineering_Projects/Area_2_Model_Training_Optimization/04_Text_Classification_BERT/src/: config.py  dataset.py  evaluator.py  model.py  predict.py  trainer.py
ML_Engineering_Projects/Area_2_Model_Training_Optimization/04_Text_Classification_BERT/tests/: test_dataset.py  test_model.py
ML_Engineering_Projects/Area_2_Model_Training_Optimization/05_Sentence_Embedding_Training/: README.md  data.txt  interview.md  pyproject.toml
ML_Engineering_Projects/Area_2_Model_Training_Optimization/05_Sentence_Embedding_Training/scripts/: evaluate_model.py  train_mnrl.py  train_sts.py
ML_Engineering_Projects/Area_2_Model_Training_Optimization/05_Sentence_Embedding_Training/src/: data_loader.py  evaluator.py  losses.py  model_utils.py  trainer.py
ML_Engineering_Projects/Area_2_Model_Training_Optimization/05_Sentence_Embedding_Training/tests/: test_data_loader.py  test_evaluator.py
ML_Engineering_Projects/Area_2_Model_Training_Optimization/06_Learning_To_Rank/: README.md  data.txt  interview.md  pyproject.toml
ML_Engineering_Projects/Area_2_Model_Training_Optimization/06_Learning_To_Rank/scripts/: evaluate_ranking.py  train_lambdamart.py  train_reranker.py
ML_Engineering_Projects/Area_2_Model_Training_Optimization/06_Learning_To_Rank/src/: data_processor.py  lambdamart_model.py  metrics.py  neural_reranker.py  pipeline.py
ML_Engineering_Projects/Area_2_Model_Training_Optimization/06_Learning_To_Rank/tests/: test_metrics.py  test_pipeline.py
ML_Engineering_Projects/Area_3_MLOps_Productionisation/07_ML_Model_REST_API/: .env.example  Dockerfile  README.md  data.txt  docker-compose.yml  interview.md  pyproject.toml
ML_Engineering_Projects/Area_3_MLOps_Productionisation/07_ML_Model_REST_API/configs/: model_config.yaml
ML_Engineering_Projects/Area_3_MLOps_Productionisation/07_ML_Model_REST_API/scripts/: load_test.py
ML_Engineering_Projects/Area_3_MLOps_Productionisation/07_ML_Model_REST_API/src/: app.py
ML_Engineering_Projects/Area_3_MLOps_Productionisation/07_ML_Model_REST_API/src/middleware/: logging.py  timing.py
ML_Engineering_Projects/Area_3_MLOps_Productionisation/07_ML_Model_REST_API/src/ml/: inference.py  model_loader.py
ML_Engineering_Projects/Area_3_MLOps_Productionisation/07_ML_Model_REST_API/tests/: conftest.py  test_health.py  test_predict.py
ML_Engineering_Projects/Area_3_MLOps_Productionisation/08_Batch_Inference_Pipeline/: README.md  data.txt  interview.md  pyproject.toml
ML_Engineering_Projects/Area_3_MLOps_Productionisation/08_Batch_Inference_Pipeline/scripts/: benchmark.py  run_batch.py
ML_Engineering_Projects/Area_3_MLOps_Productionisation/08_Batch_Inference_Pipeline/src/: config.py  data_reader.py  model_runner.py  pipeline.py  postprocessor.py  preprocessor.py  writer.py
ML_Engineering_Projects/Area_3_MLOps_Productionisation/08_Batch_Inference_Pipeline/tests/: test_data_reader.py  test_pipeline.py
ML_Engineering_Projects/Area_3_MLOps_Productionisation/09_Model_Monitoring_Drift/: README.md  data.txt  pyproject.toml
ML_Engineering_Projects/Area_3_MLOps_Productionisation/09_Model_Monitoring_Drift/scripts/: monitor_batch.py  profile_reference.py  run_dashboard.py
ML_Engineering_Projects/Area_3_MLOps_Productionisation/09_Model_Monitoring_Drift/src/: alerter.py  dashboard.py  data_quality.py  drift_detector.py  prediction_monitor.py  reference_profiler.py
ML_Engineering_Projects/Area_3_MLOps_Productionisation/09_Model_Monitoring_Drift/tests/: test_drift_detector.py  test_prediction_monitor.py
(+390 files in other folders)
