[project]
name = "gan-tutorial"
version = "0.1.0"
description = "Generative Adversarial Networks Tutorial with PyTorch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
