[project]
name = "document-qa-rag"
version = "0.1.0"
description = "Retrieval-Augmented Generation pipeline for grounded document question-answering"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2",
    "langchain-community>=0.2",
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    "transformers>=4.41",
    "torch>=2.3",
    "pypdf>=4.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "tiktoken>=0.7",
    "ollama>=0.2",
    "datasets>=2.20",
    "numpy>=1.26",
    "pandas>=2.2",
    "tqdm>=4.66",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "ragas>=0.1",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
