[project]
name = "text-classification-bert"
version = "0.1.0"
description = "Fine-tune DistilBERT for multi-class text classification with full training pipeline"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.41",
    "torch>=2.3",
    "datasets>=2.20",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "tqdm>=4.66",
    "accelerate>=0.31",
    "evaluate>=0.4",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "rich>=13.7",
    "pytest>=8.2",
    "wandb>=0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
