[project]
name = "sentence-embedding-training"
version = "0.1.0"
description = "Fine-tune sentence embedding models using NLI data and MultipleNegativesRankingLoss"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
    "transformers>=4.41",
    "torch>=2.3",
    "datasets>=2.20",
    "accelerate>=0.31",
    "evaluate>=0.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "umap-learn>=0.5",
    "matplotlib>=3.9",
    "tqdm>=4.66",
    "rich>=13.7",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
