[project]
name = "learning-to-rank"
version = "0.1.0"
description = "LambdaMART and neural cross-encoder reranking pipeline with NDCG/MAP/MRR evaluation"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.3",
    "transformers>=4.41",
    "torch>=2.3",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
    "datasets>=2.20",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "tqdm>=4.66",
    "rich>=13.7",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
