[project]
name = "ml-model-rest-api"
version = "0.1.0"
description = "Production FastAPI inference server with model serving, Prometheus metrics, and Docker support"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "transformers>=4.41",
    "torch>=2.3",
    "sentence-transformers>=2.7",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "prometheus-fastapi-instrumentator>=7.0",
    "python-dotenv>=1.0",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "locust>=2.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
