[project]
name = "batch-inference-pipeline"
version = "0.1.0"
description = "Scalable batch inference pipeline with PyTorch DataLoader, Parquet output, and throughput benchmarking"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.41",
    "torch>=2.3",
    "datasets>=2.20",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "rich>=13.7",
    "psutil>=5.9",
    "pytest>=8.2",
    "click>=8.1",
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
